--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ psycopg2 = "*"
 google-cloud-bigquery = "*"
 click = "*"
 tqdm = "*"
+flask = "*"
+wordcloud = "*"
 
 [requires]
 python_version = "3.7"
