--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "node-sass": "^4.12.0",
     "bootstrap": "^4.3.1",
     "lodash": "^4.17.15",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-d3-cloud": "^0.7.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
