--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ flask = "*"
 gunicorn = "*"
 matplotlib = "*"
 nltk = "*"
+vadersentiment = "*"
+python-decouple = "*"
 
 [requires]
 python_version = "3.7"
